# pedsiq

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_ARCADES.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN_PEDSIQ_LEARNING_ENGINE.md  IMPLEMENTATION_REPORT_v2.md  LICENSE  LINT_EXCEPTIONS.md  NEUROSCIENCE.md  PRD_PEDSIQ_LEARNING_ENGINE.md  README.md  RED_TEAM_AUDIT.md  analyze_predict.py  build_worker.py  check_page2.py  classified_batch_4.json  classify.py  classify_batch_4.py  classify_batch_4_improved.py  classify_nelson.py  classify_questions.py  classify_questions_v2.py  combine_classified.py  consolidate_data.py  debug_format.py  dose_duel.html  dose_sniper.html  download_kuhs.py  examine_more.py  examine_pdfs.py  examiner_analysis_gi_nephro_endo.md  extract_all_topics.py  extract_nelson.py  extract_nelson_v2.py  extract_questions.py  extract_questions_final.py  extract_questions_v2.py  extract_questions_v3.py  extract_topics.py  (+18 more)
nelson_extracts/: nelson_agn.txt  nelson_hematuria.txt  nelson_hypoglycemia.txt  nelson_hypothyroid.txt  nelson_intussusception.txt  (+4 more)
pipeline/: .coverage  README.md  pyproject.toml
pipeline/output/: graph_enriched.json  pattern_insights.json  regenerated_topics.json
pipeline/scripts/: extract_graph_metadata.py  map_questions_to_graph.py  rebuild_questions.py  regenerate_topics_option_c.py
pipeline/src/pedsiq/: __init__.py  cli.py  models.py
pipeline/src/pedsiq/classify/: taxonomy.py
pipeline/src/pedsiq/extract/: pdf_parser.py  validators.py
pipeline/src/pedsiq/graph/: ontology.py
pipeline/tests/: test_models.py
(+102 files in other folders)
