[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pedsiq"
version = "2.0.0"
description = "PedsIQ data pipeline — from PDF ingestion to knowledge graph analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pdfplumber>=0.10",
    "structlog>=24.0",
    "typer>=0.12",
    "networkx>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
pedsiq = "pedsiq.cli:main"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pedsiq --cov-report=term-missing"
